--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 /*fuente Playfair Display*/
  /*font-family: "Playfair Display", serif;*/
 
-html, body {
+body {
     background-color: #F7F0EB;
     font-family: "Playfair Display", serif;
 }
@@ -53,6 +53,7 @@ p {
     width: 35px;
     height: 35px;
 }
+
 nav ul {
     display: flex;
     gap: 25px;
@@ -81,7 +82,7 @@ nav ul {
     align-items: center;
     border: 6px solid #6C043C;
     border-radius: 40px;
-    margin: 40px;
+    margin: 70px 40px 70px 40px;
     height: 530px;
     padding: 0px 30px;
 }
@@ -106,7 +107,80 @@ nav ul {
     text-align: start;
     gap: 10px;
 
-} /*----------↑↑ INICIO ↑↑----------*/
+}
+@media (max-width: 450px) {
+    main {
+        flex-direction: column;
+        place-items: center;
+    }
+     nav {/*↓↓nav↓↓*/
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    nav ul {
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        font-size: 18px;
+        gap: 5px;
+    }
+    .linck-nav {
+        font-size: 13px;
+    }            /*↑↑nav↑↑*/
+    h1 {
+        font-size: 35px;
+    }
+    h2 {
+        font-size: 30px;
+    }
+    p {
+        font-size: 20px;
+    }
+    .content-inicio {
+        width: 430px;
+        height: auto;
+        text-align: center;
+        justify-content: center;
+        margin-top: 5px;
+    }
+    .title-paragraph-inicio {
+        justify-content: center;
+        text-align: center;
+        padding: 5px;
+    }
+    .img-inicio {
+        width: 350px;
+        height: 350px;
+        border-radius: 3000px;
+        margin: 5px;
+        border: 4px solid #6C043C;
+    }
+    body footer {
+        display: flex;
+        width: 100%;
+        padding: 5px;
+        flex-direction: row;
+        justify-content: center;
+    }
+    footer .p-footer {
+        font-size: 15px;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    footer .container-footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        max-width: 430px;
+        height: 100%;
+        max-height: 50px;
+    }
+}/*----------↑↑ INICIO ↑↑----------*/
 
 
 
@@ -198,7 +272,11 @@ nav ul {
         grid-template-columns: 150px 110px 110px;
         grid-template-rows: 170px 170px;
         margin-top: 0;
-    } 
+        border-radius: 15px;
+    }
+    .imagenes-chicas3, .imagenes-chicas2, .imagenes-chicas1, .imagenes-chicas4, .imagen-grande {
+        border-radius: 15px;
+    }
     .texto-tecnicas {   
         margin: 0 auto;
         align-items: center;
@@ -209,15 +287,9 @@ nav ul {
         font-size: 25;
         gap: 10px;
     }
-    header nav { /*↓↓nav↓↓*/
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    nav {
+    nav {/*↓↓nav↓↓*/
         width: 100%;
         height: auto;
-        padding: 10px 0;
         justify-content: center;
         align-items: center;
         flex-direction: column;
@@ -228,7 +300,7 @@ nav ul {
         justify-content: center;
         text-align: center;
         font-size: 18px;
-        gap: 10px;
+        gap: 5px;
     }
     .linck-nav {
         font-size: 13px;
@@ -242,12 +314,13 @@ nav ul {
     .logo {
         width: 110px;
         height: 80px;
-        align-items: center;
     }
     body footer {
         display: flex;
-        width: 430px;
+        width: 100%;
+        padding: 5px;
         flex-direction: row;
+        justify-content: center;
     }
     footer .p-footer {
         font-size: 15px;
@@ -255,12 +328,13 @@ nav ul {
         margin-bottom: 0;
     }
     footer .container-footer {
+        display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 430px;
-        height: 50px;
-        gap: 5px; 
-        padding: 3px;
+        justify-content: center;
+        width: 100%;
+        max-width: 430px;
+        height: 100%;
+        max-height: 50px;
     }
 }  /*----------↑↑ NUESTROS TRABAJOS ↑↑----------*/
 
@@ -269,13 +343,12 @@ nav ul {
 .contenedor-tye { /*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
 }
 .ol-tye {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -302,15 +375,15 @@ nav ul {
 .cont-img-tye {
     display: flex;
     object-fit: cover;
+    align-items: center;
     justify-content: flex-start;
-    flex-direction: row;
     border: 6px solid #6C043C;
     background-color: #f1d8c6;
     border-radius: 30px;
     padding: 10px;
     margin: 20px;
-    object-fit: cover;
-}
+    width: 900px;
+} /*----------↑↑ TECNICAS Y ESTILOS ↑↑----------*/
 
 
 
@@ -358,43 +431,127 @@ nav ul {
 }    /*-----------↓↓ SERVICIOS ↓↓----------*/
 
 
+
+
+.formulario { /*---------- ↓↓ FORMULARIO ↓↓ ----------*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px;
+}
+.content-de-contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contenedor-label {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 350px;
+}
+.mapa {
+    border: 5px solid #6C043C;
+    padding: 5px;
+    width: 100%;
+    max-width: 1000px;
+    height: 100%;
+    max-height: 900px;
+    border-radius: 30px;
+}
+iframe {
+    width: 100%;
+    max-width: 1000px;
+    height: 550px;
+    border-radius: 30px;
+}
+.h2-formulario {
+    text-align: center;
+}
+.p-formulario {
+    display: flex;
+    width: 500px;
+    text-align: center;
+}
+label {
+    font-size: 20px;
+    margin: 10px;
+    width: 150px; 
+}
+.boton-enviar {
+    border-radius: 10px;
+    font-size: 15px;
+    background-color: #B690A1;
+    cursor: pointer;
+}
+.boton-enviar:hover {
+    transition: 0.40s;
+    background-color: #bb5e90;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 350px;
+    height: 300px;
+    margin: 20px;
+    gap: 10px;
+}
+textarea {
+    width: 300px;
+    height: 100px;
+}  /*----------↑↑ FORMULARIO ↑↑----------*/
+
+
+
+
+
+
+
 footer { /*----------↓↓ FOOTER ↓↓----------*/
     display: flex;
-    flex-wrap: wrap;
-    background-color: #B690A1;
+    align-items: center;
     justify-content: center;
-    width: 1000px;
+    background-color: #B690A1;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 15px;
     border-radius: 80px;
-    padding-top: 5px;   
+    gap: 30px;
+    
 }
 .container-img-footer {
     display: flex;
     flex-direction: row;
-    margin-bottom: 5px;
     gap: 10px;
 }
 .imgs-footer {
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 100%;
     max-width: 60px;
     height: 100%;
     max-height: 60px;
+    margin: 0;
 }
 .imgs-footer:hover {
     transform: scale(1.06);
 }
-.p-footer {
-    font-size: 20px;
-    color: #6C043C;
-}
-.container-footer {
+.content-text {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-    gap: 25px;
+    height: 100%;
+}
+.p-footer {
+    font-size: 20px;
+    color: #6C043C;
+    margin: 0;
 } /*-----------↑↑ FOOTER ↑↑----------*/
 
 
