--- a/styles/style.css
+++ b/styles/style.css
@@ -1,563 +1,101 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-/*fuente Playfair Display*/
- /*font-family: "Playfair Display", serif;*/
-
-body {
-    background-color: #F7F0EB;
-    font-family: "Playfair Display", serif;
-}
-.logo {
-    width: 100%;
-    max-width: 150px;
-    height: 90px;
-}
-/*Titulos*/
-h1 {
-    text-align: center;
-    font-size: 50px;
-    color: #790543;
-    margin: 10px;
-}
-h2 {
-    font-size: 35px;
-}
-/*párrafos*/
-p {
-    font-size: 25px;
-    font-weight: 500;
-}
-
-.container-fluid { /*----------↓↓ HEADER ↓↓----------*/
-    display: flex;
-    margin-top: 0;
-    background-color: #B690A1;
-    font-size: 20px;
-    border-bottom: 3px solid #6C043C;
-}
-.navbar-nav {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    margin: 0 ;
-    padding: 0 ;
-}
-.nav-link {
-    color: #4A1C2C;
-}
-.navbar-svg {
-    width: 35px;
-    height: 35px;
-}
-
-nav ul {
-    display: flex;
-    gap: 25px;
-    list-style-type: none;
-}
-.navbar .nav-link:active, .navbar .nav-link:hover{
-    display: inline-block;
-    transition: 0.1s;
-    color: #6e0129;
-    transform: scale(1.1);
-}
-.navbar {
+  margin: 0;
   padding: 0;
 }
-.navbar .nav-link.active {
-    color: #960037;
-}
- /*----------↑↑ HEADER ↑↑----------*/
 
-
-.content-inicio { /*----------↓↓ INICIO ↓↓ ----------*/
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border: 6px solid #6C043C;
-    border-radius: 40px;
-    margin: 70px 40px 70px 40px;
-    height: 530px;
-    padding: 0px 30px;
-}
-.img-inicio {
-    display: flex;
-    width: 100%;
-    max-width: 600px;
-    height:600px;
-    flex-wrap: wrap;
-    border: 6px solid #6C043C;
-    border-radius: 1000px;
-    margin-top: -50px;
-    margin-bottom: -50px; 
-    object-fit: cover;
-}
-.title-paragraph-inicio {
-    display: flex;
-    flex-direction: column;
-    padding-left: 30px;
-    width: 100%;
-    max-width: 1100px;
-    text-align: start;
-    gap: 10px;
-
-}
-@media (max-width: 450px) {
-    main {
-        flex-direction: column;
-        place-items: center;
-    }
-     nav {/*↓↓nav↓↓*/
-        width: 100%;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-    nav ul {
-        width: 100%;
-        flex-wrap: wrap;
-        justify-content: center;
-        text-align: center;
-        font-size: 18px;
-        gap: 5px;
-    }
-    .linck-nav {
-        font-size: 13px;
-    }            /*↑↑nav↑↑*/
-    h1 {
-        font-size: 35px;
-    }
-    h2 {
-        font-size: 30px;
-    }
-    p {
-        font-size: 20px;
-    }
-    .content-inicio {
-        width: 430px;
-        height: auto;
-        text-align: center;
-        justify-content: center;
-        margin-top: 5px;
-    }
-    .title-paragraph-inicio {
-        justify-content: center;
-        text-align: center;
-        padding: 5px;
-    }
-    .img-inicio {
-        width: 350px;
-        height: 350px;
-        border-radius: 3000px;
-        margin: 5px;
-        border: 4px solid #6C043C;
-    }
-    body footer {
-        display: flex;
-        width: 100%;
-        padding: 5px;
-        flex-direction: row;
-        justify-content: center;
-    }
-    footer .p-footer {
-        font-size: 15px;
-        text-align: center;
-        margin-bottom: 0;
-    }
-    footer .container-footer {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        max-width: 430px;
-        height: 100%;
-        max-height: 50px;
-    }
-}/*----------↑↑ INICIO ↑↑----------*/
-
-
-
-
-.contenedor-nt {   /*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 10px; 
-}
-.contenedor-principal-imgs { 
-    display: grid;
-    grid-template-columns: 350px 300px 300px;
-    grid-template-rows: 300px 300px;
-    grid-template-areas: 
-        "img-grande1 img-chica1 img-chica2"
-        "img-grande1 img-chica3 img-chica4";
-    gap: 10px;
-    padding: 5px;
-    margin: 19px;
-    border: 5px solid #6C043C;
-    border-radius: 30px;
-}
-.contenedor-principal-imgs:hover {
-    transition: 0.3s;
-    background-color: #f1d8c6;
-}
-.img-chica1 {
-    grid-area: img-chica1;
-}
-.img-chica2 {
-    grid-area: img-chica2;
-}
-.img-chica3 {
-    grid-area: img-chica3;
-}
-.img-chica4 {
-    grid-area: img-chica4;
-}
-.img-grande1 {
-    grid-area: img-grande1;
-}
-.imagenes-chicas3, .imagenes-chicas2, .imagenes-chicas1, .imagenes-chicas4 {
-    transition:  0.2s; 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 30px;
-}
-.imagen-grande {
-    transition:  0.2s; 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 30px;;
-}
-.texto-tecnicas {  
-    display: flex;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 600px;
-    width: 100%;
-    max-width: 650px;
-    margin-left: 130px;
-    padding: 30px;
-    gap: 30px;
+/*fuente Playfair Display*/
+/*font-family: "Playfair Display", serif;*/
+body {
+  background-color: #F7F0EB;
+  font-family: "Playfair Display", serif;
 }
 
-.imagenes-chicas4:hover, .imagenes-chicas1:hover, .imagenes-chicas2:hover, .imagenes-chicas3:hover, .imagen-grande:hover {/* agranda al pasar el puntero */
-  transform: scale(1.06); 
+.navbar { /*----------↓↓ HEADER ↓↓----------*/
+  padding: 0;
 }
-.imagenes-chicas4:active, .imagenes-chicas1:active, .imagenes-chicas2:active, .imagenes-chicas3:active, .imagen-grande:active {/* achica al click */
-  transform: scale(0.95); 
+.navbar .container-fluid {
+  display: flex;
+  margin-top: 0;
+  background-color: #B690A1;
+  font-size: 20px;
+  border-bottom: 3px solid #6C043C;
 }
-@media (max-width: 450px) {  /*media query mobile*/
-    .contenedor-nt {
-        display: flex;
-        flex-direction: column; 
-        align-items: center; 
-        justify-content: center;   
-        gap: 0;   
-        width: 100%;
-    }
-    .contenedor-principal-imgs {
-        margin: 0 auto;
-        justify-content: center;
-        grid-template-columns: 150px 110px 110px;
-        grid-template-rows: 170px 170px;
-        margin-top: 0;
-        border-radius: 15px;
-    }
-    .imagenes-chicas3, .imagenes-chicas2, .imagenes-chicas1, .imagenes-chicas4, .imagen-grande {
-        border-radius: 15px;
-    }
-    .texto-tecnicas {   
-        margin: 0 auto;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        width: 95%;
-        height: auto;
-        font-size: 25;
-        gap: 10px;
-    }
-    nav {/*↓↓nav↓↓*/
-        width: 100%;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-    nav ul {
-        width: 100%;
-        flex-wrap: wrap;
-        justify-content: center;
-        text-align: center;
-        font-size: 18px;
-        gap: 5px;
-    }
-    .linck-nav {
-        font-size: 13px;
-    }            /*↑↑nav↑↑*/
-    h1 { 
-        font-size: 40px;
-    }
-    h2 {
-        font-size: 30px;
-    }
-    .logo {
-        width: 110px;
-        height: 80px;
-    }
-    body footer {
-        display: flex;
-        width: 100%;
-        padding: 5px;
-        flex-direction: row;
-        justify-content: center;
-    }
-    footer .p-footer {
-        font-size: 15px;
-        text-align: center;
-        margin-bottom: 0;
-    }
-    footer .container-footer {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        max-width: 430px;
-        height: 100%;
-        max-height: 50px;
-    }
-}  /*----------↑↑ NUESTROS TRABAJOS ↑↑----------*/
+.navbar .container-fluid .logo {
+  width: 100%;
+  max-width: 150px;
+  height: 90px;
+}
+.navbar .container-fluid .navbar-svg {
+  width: 35px;
+  height: 35px;
+}
+.navbar .container-fluid .navbar-nav {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.navbar .container-fluid .navbar-nav ul {
+  display: flex;
+  gap: 25px;
+  list-style-type: none;
+}
+.navbar .container-fluid .navbar-nav .nav-link {
+  color: #4A1C2C;
+}
+.navbar .container-fluid .navbar-nav .nav-link:active, .navbar .container-fluid .navbar-nav .nav-link:hover {
+  display: inline-block;
+  transition: 0.1s;
+  color: #6e0129;
+  transform: scale(1.1);
+}
 
- 
-
-.contenedor-tye { /*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
-    display: flex;
-    flex-wrap: wrap;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-}
-.ol-tye {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 20px;
-    padding: 10px;
-    gap: 10px;
-    width: 0 auto;
-    height: 0 auto;
-}
-.imgs-tec-esti {
-    width: 100%;
-    max-width: 200px;
-    height: 210px;
-    object-fit: cover;
-    border-radius: 30px;
-}
-.imgs-tye-pies {
-    width: 100%;
-    max-width: 280px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 30px;
-}
-.cont-img-tye {
-    display: flex;
-    object-fit: cover;
-    align-items: center;
-    justify-content: flex-start;
-    border: 6px solid #6C043C;
-    background-color: #f1d8c6;
-    border-radius: 30px;
-    padding: 10px;
-    margin: 20px;
-    width: 900px;
-} /*----------↑↑ TECNICAS Y ESTILOS ↑↑----------*/
-
-
-
-
-
-.content-principal-servicios { /*-----------↓↓ SERVICIOS ↓↓----------*/
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 100px;
-    margin-bottom: 30px;
-}
-.content-uñas-rojas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 6px solid #4A1C2C;
-    border-radius: 30px;
-    width: 100%;
-    max-width: 800px;
-    padding: 10px;
-}
-.content-pies {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 6px solid #4A1C2C;
-    border-radius: 30px;
-    width: 100%;
-    max-width: 800px;
-    padding: 10px;
-    
-}
-.img-servicios-manos {
-    max-width: 100%;
-    width: 800px;
-    height: 500px;
-    border-radius: 30px;
-}
-.img-servicios-pies {
-    max-width: 100%;
-    width: 800px;
-    height: 500px;
-    border-radius: 30px;
-}    /*-----------↓↓ SERVICIOS ↓↓----------*/
-
-
-
-
-.formulario { /*---------- ↓↓ FORMULARIO ↓↓ ----------*/
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 30px;
-}
-.content-de-contacto {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.contenedor-label {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    max-width: 350px;
-}
-.mapa {
-    border: 5px solid #6C043C;
-    padding: 5px;
-    width: 100%;
-    max-width: 1000px;
-    height: 100%;
-    max-height: 900px;
-    border-radius: 30px;
-}
-iframe {
-    width: 100%;
-    max-width: 1000px;
-    height: 550px;
-    border-radius: 30px;
-}
-.h2-formulario {
-    text-align: center;
-}
-.p-formulario {
-    display: flex;
-    width: 500px;
-    text-align: center;
-}
-label {
-    font-size: 20px;
-    margin: 10px;
-    width: 150px; 
-}
-.boton-enviar {
-    border-radius: 10px;
-    font-size: 15px;
-    background-color: #B690A1;
-    cursor: pointer;
-}
-.boton-enviar:hover {
-    transition: 0.40s;
-    background-color: #bb5e90;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    max-width: 350px;
-    height: 300px;
-    margin: 20px;
-    gap: 10px;
-}
-textarea {
-    width: 300px;
-    height: 100px;
-}  /*----------↑↑ FORMULARIO ↑↑----------*/
-
-
-
-
-
-
-
+/*----------↑↑ HEADER ↑↑----------*/
 footer { /*----------↓↓ FOOTER ↓↓----------*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #B690A1;
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-bottom: 15px;
-    border-radius: 80px;
-    gap: 30px;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #B690A1;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  border-radius: 80px;
+  gap: 30px;
 }
-.container-img-footer {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+footer .content-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
-.imgs-footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    max-width: 60px;
-    height: 100%;
-    max-height: 60px;
-    margin: 0;
+footer .content-text .p-footer {
+  font-size: 20px;
+  color: #6C043C;
+  margin: 0;
 }
-.imgs-footer:hover {
-    transform: scale(1.06);
+footer .container-img-footer {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
-.content-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+footer .container-img-footer .imgs-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  max-width: 60px;
+  height: 100%;
+  max-height: 60px;
+  margin: 0;
 }
-.p-footer {
-    font-size: 20px;
-    color: #6C043C;
-    margin: 0;
-} /*-----------↑↑ FOOTER ↑↑----------*/
+footer .container-img-footer .imgs-footer:hover {
+  transform: scale(1.06);
+}
 
+/*-----------↑↑ FOOTER ↑↑----------*/
 
-
-
-
-
-
-
+/*# sourceMappingURL=style.css.map */
