--- a/scss/partials/base/_tipografia.scss
+++ b/scss/partials/base/_tipografia.scss
@@ -1,8 +1,7 @@
 //aca va la tipografia//
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-/*fuente Playfair Display*/
- /*font-family: "Playfair Display", serif;*/
+@import url('https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap');
+
 body {
     background-color: #F7F0EB;
-    font-family: "Playfair Display", serif;
- }
+    font-family: "Corben", serif;
+}
