--- a/scss/partials/layout/_textos.scss
+++ b/scss/partials/layout/_textos.scss
@@ -5,26 +5,33 @@
     @include mixins.flex(column, center, center);
     text-align: center;
     @include mixins.width-height(650px, 600px);
-    margin-top: 30px;
-    margin-left: 130px;
+    margin: 30px auto 0 auto;
     padding: 30px;
     gap: 20px;
 } 
 .guia-tecnica {
-    @include mixins.flex(column, null, center);
-    p {
+    gap: 10px;
+    .p-tecnica {
         text-align: center;
-        margin: 0 5px 0 5px;
+        margin: 0 4px 0 4px;
     }
-    ul {
-    
+    .ul-tecnica {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding-left: 0;
+        margin-left: 0;
+        gap: 8px;
+
         li {
+            margin: 0 3px 0 3px;
+            text-align: center;
             list-style: none;
-            background: #f7f0eb;
-            padding: 10px 10px;
+            padding: 8px;
             border-radius: 10px;
             border-left: 4px solid #4A1C2C;
-            margin: 7px;
+            border-right: 4px solid #4A1C2C;
             font-size: 18px;
         }
     }
